# fil-agent

./: .deploy.env.example  .env.example  .env.local  .gitignore  AGENT_PLAN.md  CLAUDE.md  README.md  delete-agent.sh  deploy.sh  list-agents.sh  pyproject.toml  requirements.txt  test_deployed_agent.py
Project/: workflow-guidelines.md
common/: schemas.py
falls_cms_agent/: __init__.py  agent.py  callbacks.py  config.py
falls_cms_agent/agents/: __init__.py  cms.py  content.py  research.py  router.py
falls_cms_agent/common/: __init__.py  schemas.py
falls_cms_agent/core/: __init__.py  callbacks.py  config.py  context.py  logging.py  mcp_client.py  prompts.py
falls_cms_agent/pipelines/: __init__.py  create_page.py  management.py  router.py
falls_cms_agent/prompts/: __init__.py  cms.py  cms.yaml  content.py  content.yaml  research.py  research.yaml  root.yaml  router.yaml  voice.yaml
scripts/: record_trajectories.py  trajectories_to_fixtures.py
tests/: __init__.py  conftest.py  test_agents.py  test_evaluations.py  test_vertex_eval.py
tests/fixtures/: all_recorded.test.json  content_blocks.test.json  conversational.test.json  duplicate_detection.test.json  fake_waterfall_rejection.test.json  intent_classification.test.json  list_and_search.test.json  page_management.test.json  parent_page_assignment.test.json
tests/trajectories/: all_trajectories.json  la_paz_trajectory.json
